updated all classes for the UI

--- a/view/login.ui
+++ b/view/login.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>login</class>
- <widget class="QMainWindow" name="login">
+ <class>Login</class>
+ <widget class="QMainWindow" name="Login">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -126,9 +126,9 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Button">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -198,18 +198,18 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Base">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
                 <colorrole role="Window">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -263,9 +263,9 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Button">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>240</red>
-                   <green>240</green>
-                   <blue>240</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -335,18 +335,18 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Base">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
                 <colorrole role="Window">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>240</red>
-                   <green>240</green>
-                   <blue>240</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -400,9 +400,9 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Button">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -472,18 +472,18 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Base">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
                 <colorrole role="Window">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -587,9 +587,9 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Base">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
@@ -607,27 +607,27 @@ font: 700 15pt &quot;Segoe UI&quot;;</string>
                 <colorrole role="Button">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>240</red>
-                   <green>240</green>
-                   <blue>240</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
                 <colorrole role="Base">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>255</red>
-                   <green>255</green>
-                   <blue>255</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
                 <colorrole role="Window">
                  <brush brushstyle="SolidPattern">
                   <color alpha="255">
-                   <red>240</red>
-                   <green>240</green>
-                   <blue>240</blue>
+                   <red>47</red>
+                   <green>167</green>
+                   <blue>218</blue>
                   </color>
                  </brush>
                 </colorrole>
