--- a/view/deposit.ui
+++ b/view/deposit.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>deposit</class>
- <widget class="QWidget" name="deposit">
+ <class>Deposit</class>
+ <widget class="QWidget" name="Deposit">
   <property name="geometry">
    <rect>
     <x>0</x>
