--- a/view/history.ui
+++ b/view/history.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>history</class>
- <widget class="QWidget" name="history">
+ <class>History</class>
+ <widget class="QWidget" name="History">
   <property name="geometry">
    <rect>
     <x>0</x>
