--- a/view/transfer.ui
+++ b/view/transfer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>transfer</class>
- <widget class="QWidget" name="transfer">
+ <class>Transfer</class>
+ <widget class="QWidget" name="Transfer">
   <property name="geometry">
    <rect>
     <x>0</x>
