--- a/view/login.ui
+++ b/view/login.ui
@@ -43,7 +43,7 @@
           <bool>true</bool>
          </property>
          <property name="styleSheet">
-          <string notr="true">background-color: rgb(47, 167, 218);</string>
+          <string notr="true"/>
          </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
