--- a/view/history.ui
+++ b/view/history.ui
@@ -33,6 +33,23 @@ font: 700 28pt &quot;Segoe UI&quot;;</string>
     <string>HISTORY</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>30</y>
+     <width>71</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(168, 212, 241);
+font: 700 9pt &quot;Segoe UI&quot;;</string>
+   </property>
+   <property name="text">
+    <string>back</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
